# iobench

./: .gitignore  Makefile  README.md
data/: data.txt
go/: fasthttp.go  go.mod  go.sum  handlers.go  main.go  mock.go  splice.go  stat.go  tcp.go
go/client/gorpc/: gorpc.go
go/client/iorpc/: iorpc.go
go/client/memory/: memory.go
go/client/tcp/: tcp.go
go/gorpc/: client.go  server.go
go/gorpc-client/: main.go
go/iorpc/: client.go  server.go
rust/: Cargo.toml
rust/src/: main.rs  stat.rs
